# lasagna-v2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.1.0.md  config.example.env  lasagna_mvp.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  security.yml  supply-chain.yml
data/examples/: flat_spike.csv  sine_auto_varint.lsg2  sine_noise.csv  trend.csv  trend_auto.lsg2
docs/: PIPELINE.md  examples-profiles.md  examples-trend-sine.md  manifesto.md
lasagna2/: __init__.py  cli.py  core.py
tests/: test_cli_encode_decode_info.py  test_core_roundtrip.py  test_decode_malicious.py  test_tools_cluster_profiles.py  test_tools_semantic_events.py
tools/: alarms_intensity_viewer.py  batch_profile.py  cluster_profiles.py  generate_demo_data.py  generate_fake_alarms.py  lasagna_viewer.py  prep_alarms.py  semantic_events.py
